<?xml version="1.0" encoding="utf-8"?>
    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/bigPage"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".search.view.GeneralSearchFragment">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:text="@string/search"
                android:textColor="@color/notBlack"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.003"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="@+id/guideline6"
                tools:text="Search" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="357dp"
                android:layout_height="64dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/rounded_edit_text"
                android:elevation="10dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <TextView
                    android:id="@+id/searchGeneralEditText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableLeft="@drawable/baseline_search_24"
                    android:ems="10"
                    android:gravity="left"
                    android:hint="Search by Name"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="14dp" />


            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/countrySearch_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/barlow"
                android:text="@string/filtter_by_country"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/counties_recyclerView"
                android:layout_width="375dp"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.485"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/countrySearch_textView"
                tools:itemCount="10"
                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/country_search_row_layout"
                tools:orientation="horizontal"
                tools:spanCount="2" />

            <TextView
                android:id="@+id/categoriesSearch_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/barlow"
                android:text="@string/search_by_categories"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/counties_recyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categories_recyclerView"
                android:layout_width="370dp"
                android:layout_height="90dp"
                android:layout_marginTop="20dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.414"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoriesSearch_textView"
                app:spanCount="2"
                tools:itemCount="10"
                tools:listitem="@layout/country_search_row_layout" />

            <TextView
                android:id="@+id/ingredientSearch_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="11dp"
                android:fontFamily="@font/barlow"
                android:text="@string/filtter_by_ingredients"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categories_recyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredients_recyclerView"
                android:layout_width="391dp"
                android:layout_height="179dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredientSearch_textView"
                tools:itemCount="10"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/ingredients_item"
                tools:orientation="horizontal" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="395dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="29dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
